# QSSPreview

./: CMakeLists.txt  QSSPreview.rc  README.md  mainwindow.ui
Readme/: readme.html
Readme/readme_files/: style.css
images/: icons.pptx  icons.qrc
source/: common.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: About.ui  MainWindow.ui
